[tool.poetry]
name = "co-dev-backend-mobile"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
alembic = "^1.9.4"
aiosqlite = "^0.18.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
